# ftransfer

./: .gitmodules  CMakeLists.txt  build.sh
debug/: demo.json  main.cpp
utils/: deleter.h
